--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
             <div><svg width="100px" height="100px"><circle cx="100" cy="100" r="100" fill="#1fa3ec"></circle></svg></div>
             <footer><p><a href="#top">[Top]</a></p></footer>
           </article>
-          <article id="embedded__iframe">
+<!--          <article id="embedded__iframe">
             <header><h2>IFrame</h2></header>
             <div><iframe src="index.html" height="300"></iframe></div>
             <footer><p><a href="#top">[Top]</a></p></footer>
@@ -393,6 +393,7 @@
             <div><object data="index.html" height="300"></object></div>
             <footer><p><a href="#top">[Top]</a></p></footer>
           </article>
+-->
         </section>
         <section id="forms">
           <header><h2>Form elements</h2></header>
